# doc_parser

./: .coverage  .gitignore  README.md  hello.py  output.txt  pyproject.toml  scratch2.ipynb  test.py
doc_parser/: __init__.py  convert_pdf.py
doc_parser/utils/: openai_agent.py
