[project]
name = "doc-parser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "ipykernel>=6.29.5",
    "openai-agents>=0.1.0",
    "pydantic>=2.11.7",
    "pymupdf>=1.26.3",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.12.2",
    "nox>=2025.5.1",
    "pre-commit>=4.2.0",
    "pytest-cov>=6.2.1",
    "pytest-doctestplus>=1.4.0",
    "isort>=6.0.1",
]

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"
